2004-01-07 hgg <hgreig@bigpond.net.au>
	* DETAILS: update to 0.9.3

2003-06-18 hgg <hgreig@bigpond.net.au>
	* New Games grimoire is born!

2003-06-06 hgg <hgreig@bigpond.net.au>
	* DETAILS: Update to 0.9.2

2003-05-19 hgg <hgreig@bigpond.net.au>
	* BUILD: Update for ${INSTALL_ROOT}

2003-01-31 Eric Sandall <eric@sandall.us>
	* Fixed Bug #2443

2003-01-25 Eric Sandall <eric@sandall.us>
	* DETAILS: Updated to 0.9.1 (Bug #2377, thanks to Snakebyte)

2002-12-05 Eric Sandall <eric@sandall.us>
	* DETAILS: Updated to v0.9.0

2002-09-21 Eric Sandall <eric@sandall.us>
	* DETAILS: New version: 0.8.0

2002-08-28 Gareth Clay <g.clay@warwick.ac.uk>
	* DETAILS: Added md5 and license fields
	  Changed maintainer

2002-04-24 Jerome Zago <jerome.zago@insalien.org>
	* DETAILS: New version: 0.7.10
	* BUILD: Man pages are now installed in /usr/share/man instead of
	  /usr/man, to be more FHS compliant.
