@@ -4,12 +4,13 @@
 SOURCE_DIRECTORY=${BUILD_DIRECTORY}/${SPELL}-${VERSION}
    SOURCE_URL[0]=ftp://ftp.flightgear.org/pub/fgfs/Source/${SOURCE}
    SOURCE_URL[1]=ftp://ftp.ihg.uni-duisburg.de/Mirrors/ftp.flightgear.org/Source/${SOURCE}
+          MD5[0]=dfd4c60af89f9d61ae8f4b84c4a7ab20
         WEB_SITE=http://www.flightgear.org
          ENTERED=20010922
          UPDATED=20040107
-          MD5[0]=dfd4c60af89f9d61ae8f4b84c4a7ab20
       LICENSE[0]=GPL
-           SHORT="FlightGear is a flight simulator."
+       BUILD_API=2
+           SHORT="Flight simulator."
 cat << EOF
 The Flight Gear Flight Simulator project is a free, open-source,
 multi-platform, cooperative flight sim development project. Source code
