@@ -1,3 +1,11 @@
+2004-07-13 Eric Sandall <eric@sandall.us>
+	* DETAILS: BUILD_API=2
+	  Shortened SHORT
+	* BUILD: Converted to BUILD_API 2
+	  Apply plib.patch
+	* plib.patch: Added patch for plib >= 1.8.0
+	  http://baron.flightgear.org/pipermail/flightgear-cvslogs/2004-March/007275.html
+
 2004-01-07 hgg <hgreig@bigpond.net.au>
 	* DETAILS: update to 0.9.3
 
